#11 Fix: code review 1. Refactor 2. Page header wrap content when there is no space 3. App header height decrease on smaller screens

--- a/style/components/page-header.css
+++ b/style/components/page-header.css
@@ -7,6 +7,7 @@
 
 .page-header {
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .page-header .invite-users {
@@ -21,16 +22,4 @@
 .page-header .users {
   display: flex;
   gap: 1rem;
-}
-
-@media (max-width: 768px) {
-  .page-header {
-    flex-direction: column;
-    align-items: start;
-    gap: 0.5rem;
-  }
-
-  .page-header h1 {
-    font-size: 2rem;
-  }
 }
