--- a/style/layout.css
+++ b/style/layout.css
@@ -21,9 +21,7 @@
   .sidebar {
     display: none !important;
   }
-}
 
-@media (max-width: 992px) {
   .container {
     padding-top: 1rem;
     padding-bottom: 1rem;
