--- a/style/typography.css
+++ b/style/typography.css
@@ -15,3 +15,17 @@ h1 {
 h4 {
   margin-bottom: 0.5rem;
 }
+
+/* --breakpoint-lg */
+@media (max-width: 992px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+
+/* --breakpoint-xs */
+@media (max-width: 576px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
